All build blockers are gone; the Gradle suite now passes end-to-end.
- Cleaned up the codec filebuffer tests to satisfy checkstyle (e.g. trailing comma and unused imports) at sulky-codec-filebuffer/src/test/java/de/huxhorn/sulky/codec/filebuffer/CodecFileBufferTest.java:28 plus the companion strategy tests.
- Reworked the formatting tests: added try-with-resources to close readers (ReplaceInvalidXmlCharacterReaderTest.java:15), replaced direct reference checks with assertSame (SimpleXmlTest.java:124), and modernised SafeStringTest with short array initialisers, IntStream-based boxing helpers, and a tiny SimpleSet support class to avoid banned collection types (SafeStringTest.java:102, SafeStringTest.java:354, SafeStringTest.java:430).
- Swapped fragile equality assertions for assertNotEquals/assertEquals where required, e.g. in GenericWrapperTest.java:25 and throughout the ULID value tests (ULIDTest.java:59, ULIDTest.java:485) while also renaming StubRandom.of to fromValues and adding a serialVersionUID.
- Updated JUnitToolsTest to return strongly typed clones and to avoid deprecated boxing; see JUnitToolsTest.java:224, JUnitToolsTest.java:272, and JUnitToolsTest.java:349.
- Harmonised the Java-version parsing suite with PMD expectations: tweaked invalid version strings, suppressed the long parameter warning, and switched equality tests to assertNotEquals / assertEquals across JavaVersionTest.java:56, Jep223JavaVersionTest.java:27, SemanticVersionTest.java:62, and YeOldeJavaVersionTest.java:201.